k8s/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goserver
spec:
  selector:
    app: goserver
  type: ClusterIP
  ports:
  - port: 8000 # porta da aplicação
    protocol: TCP
    name: http-goserver
    # targetPort: 8000 # porta que vai ser acessivel via request
